pic and projects

--- a/index.html
+++ b/index.html
@@ -106,12 +106,18 @@
                         <div class="col-12 col-md-12 text-center">
                             <div class="title-desc">
                                 <h2 class="display-4 display-title home-title anim-1">Kate Davis</h2>
-                                <h4 class="anim-2 opacity-75">Portfolio and resume page</h4>
+                                <h4 class="anim-2 opacity-75">Portfolio</h4>
                             </div>
+                        </div>
+                        <div class="col-12">
+                            <img src="me.JPG" style="width:200px;height:350px">
                         </div>
                     </div>
                 </div>
-
+                <br>
+                <br>
+                <br>
+                <br>
                 <footer class="section-footer scrolldown">
                     <a class="down">
                         <span class="icon"></span>
@@ -133,11 +139,9 @@
                     <div class="row">
 
                         <div class="text-center">
-                            <div class="title-desc anim-2">
-                                <p>Entry level web developer excited for new and exciting challenges.</p>
-                                <!---- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris aliquet malesuada
-                                    feugiat. Curabitur fermentum bibendum nulla, non dictum ipsum tincidunt non. Quisque
-                                    convallis pharetra tempor.</p><!-->
+                            <div class="title-desc anim-2 text-center">
+                                Student. Entry level full-stack web developer. Free-lance model. Looking to take on new
+                                and exciting challenges to help further my passions and career.
                             </div>
                         </div>
                     </div>
@@ -158,7 +162,7 @@
             <div class="section-wrapper twoside center-vh dir-col anim">
                 <div class="anim-2 text-center mb-3">
                     <h2 class="display-4 display-title">Services</h2>
-                    <p>Our awesome services which we provide for your needs</p>
+
                 </div>
 
                 <div class="item row justify-content-between fade-1">
@@ -168,16 +172,20 @@
                                 <div class="media-body">
                                     <h4>Development</h4>
                                     <i class="icon icon ion-code-working"></i>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris aliquet malesuada
-                                        feugiat. Curabitur fermentum bibendum nulla, non dictum ipsum tincidunt non.</p>
+                                    <p>I am able to maintain websites and applications, including content updates,
+                                        debugging, feature adjustments, and upgrades to ensure system usability. Avid in
+                                        researching new web technologies, including software and hardware developments,
+                                        and can reccomend purchases in changes in design, security, and software.</p>
                                 </div>
                             </div>
                             <div class="media">
                                 <div class="media-body">
                                     <h4>Marketing</h4>
                                     <i class="icon ion-ios-pie-outline"></i>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris aliquet malesuada
-                                        feugiat. Curabitur fermentum bibendum nulla, non dictum ipsum tincidunt non.</p>
+                                    <p>Collabortation is a part of web-development that I am most excited about. I am
+                                        able to
+                                        create a professional looking website for companies that
+                                        will keep attract clientele. </p>
                                 </div>
                             </div>
                         </div>
@@ -189,124 +197,30 @@
                                 <div class="media-body">
                                     <h4>Design</h4>
                                     <i class="icon ion-paintbrush"></i>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris aliquet malesuada
-                                        feugiat. Curabitur fermentum bibendum nulla, non dictum ipsum tincidunt non.</p>
+                                    <p>Through out my time of learning front-end languages such as; basic HTML,
+                                        Bootstrap, javascript, and React I am able to provide a distinguished and
+                                        attractive website.</p>
                                 </div>
                             </div>
                             <div class="media">
                                 <div class="media-body">
-                                    <h4>SEO</h4>
+                                    <h4>Modeling and Acting</h4>
                                     <i class="icon ion-android-globe"></i>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris aliquet malesuada
-                                        feugiat. Curabitur fermentum bibendum nulla, non dictum ipsum tincidunt non.</p>
+                                    <p>I have had the pleasure of working free-lance with a number of Dallas
+                                        photographers and
+                                        artists posing for paintings, fashion and makeup photgraphy, and music videos in
+                                        terms of acting.</p>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <footer class="section-footer scrolldown">
-                    <a class="down">
-                        <span class="icon"></span>
-                        <span class="txt">Team</span>
-                    </a>
-                </footer>
-            </div>
-        </div>
-        <!-- End Services -->
 
-        <!-- Start Team -->
-        <div class="section section-team fp-auto-height-responsive " data-section="team">
-            <div class="section-wrapper center-vh dir-col anim">
-                <div class="section-title text-center">
-                    <h2 class="display-4 display-title anim-2 mb-32">Team</h2>
-                </div>
+                <!-- End Services -->
 
-                <div class="section-content anim text-center">
-                    <div class="item row justify-content-between">
-                        <div class="col-12 col-sm-6 col-md-4 center-vh">
-                            <div class="section-content anim translateUp">
-                                <div class="images text-center">
-                                    <div class="img-avatar-alpha">
-                                        <div class="img-1 shadow">
-                                            <a href="item.html">
-                                                <img class="img" src="http://via.placeholder.com/550x550" alt="Image">
-                                            </a>
-                                            <div class="legend pos-abs">
-                                                <div class="text-left">
-                                                    <h5>David Miler</h5>
-                                                    <p class="small">CEO / Founder</p>
-                                                </div>
-                                            </div>
-                                            <div class="icons text-left">
-                                                <a class="icon-btn" href="#">
-                                                    <i class="icon ion-social-linkedin"></i>
-                                                </a>
-                                                <a class="icon-btn" href="#">
-                                                    <i class="icon ion-social-facebook"></i>
-                                                </a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12 col-sm-6 col-md-4 center-vh">
-                            <div class="section-content anim">
-                                <div class="images text-center">
-                                    <div class="img-avatar-alpha">
-                                        <div class="img-1 shadow">
-                                            <a href="item.html">
-                                                <img class="img" src="http://via.placeholder.com/550x550" alt="Image">
-                                            </a>
-                                            <div class="legend pos-abs">
-                                                <div class="text-left">
-                                                    <h5>Sara Eniston</h5>
-                                                    <p class="small">Designer</p>
-                                                </div>
-                                            </div>
-                                            <div class="icons text-left">
-                                                <a class="icon-btn" href="#">
-                                                    <i class="icon ion-social-linkedin"></i>
-                                                </a>
-                                                <a class="icon-btn" href="#">
-                                                    <i class="icon ion-social-facebook"></i>
-                                                </a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12 col-sm-6 col-md-4 center-vh">
-                            <div class="section-content anim translateDown">
-                                <div class="images text-center">
-                                    <div class="img-avatar-alpha">
-                                        <div class="img-1 shadow">
-                                            <a href="item.html">
-                                                <img class="img" src="http://via.placeholder.com/550x550" alt="Image">
-                                            </a>
-                                            <div class="legend pos-abs">
-                                                <div class="text-left">
-                                                    <h5>James Duncan</h5>
-                                                    <p class="small">Web Developer</p>
-                                                </div>
-                                            </div>
-                                            <div class="icons text-left">
-                                                <a class="icon-btn" href="#">
-                                                    <i class="icon ion-social-linkedin"></i>
-                                                </a>
-                                                <a class="icon-btn" href="#">
-                                                    <i class="icon ion-social-facebook"></i>
-                                                </a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <!-- Start Team -->
+
 
                 <footer class="section-footer scrolldown">
                     <a class="down">
@@ -331,33 +245,32 @@
                             <li class="slide-item swiper-slide">
                                 <div class="item-wrapper">
                                     <div class="illustr">
-                                        <img src="http://via.placeholder.com/1920x2275" alt="Image" class="img">
+                                        <img src="wordguess.png" alt="Image" class="img">
                                     </div>
-                                    <a class="legend" href="item.html#project_url">
-                                        <h2 class="display-4">Fashion</h2>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                    <a class="legend" href="https://katedavis248.github.io/word_guess/">
+                                        <h2 class="display-4">Word Guess Game</h2>
                                     </a>
                                 </div>
                             </li>
                             <li class="slide-item swiper-slide">
                                 <div class="item-wrapper">
                                     <div class="illustr">
-                                        <img src="http://via.placeholder.com/1920x2275" alt="Image" class="img">
+                                        <img src="crystal.jpg" alt="Image" class="img">
                                     </div>
-                                    <a class="legend" href="item.html#project_url">
-                                        <h2 class="display-4">Building</h2>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                    <a class="legend" href="https://katedavis248.github.io/crystal/">
+                                        <h2 class="display-4">Crystal Collector Game
+                                        </h2>
+
                                     </a>
                                 </div>
                             </li>
                             <li class="slide-item swiper-slide">
                                 <div class="item-wrapper">
                                     <div class="illustr">
-                                        <img src="http://via.placeholder.com/1920x2275" alt="Image" class="img">
+                                        <img src="destination.jpg" alt="Image" class="img">
                                     </div>
-                                    <a class="legend" href="item.html#project_url">
-                                        <h2 class="display-4">Photography</h2>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                    <a class="legend" href="https://1fungi99.github.io/Project-1/">
+                                        <h2 class="display-4">Destination</h2>
                                     </a>
                                 </div>
                             </li>
