--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
 
     <!-- Start Header -->
-    <header class="page-header navbar page-header-alpha scrolled-white menu-right topmenu-right">
+    <!----  <header class="page-header navbar page-header-alpha scrolled-white menu-right topmenu-right">
         <button class="navbar-toggler site-menu-icon" id="navMenuIcon">
             <span class="menu-icon menu-icon-random">
                 <span class="bars">
@@ -50,44 +50,44 @@
                     <span class="bar3"></span>
                 </span>
             </span>
-        </button>
+        </button>-->
 
-        <a class="navbar-brand" href="#home">
-            <!--<span class="logo">
-        <img class="light-logo" src="./resources/img/logo-black.png" alt="Logo">
-      </span><!-->
-        </a>
+    <!---- <a class="navbar-brand" href="#home">
+        <span class="logo">
+            <img class="light-logo" src="./resources/img/logo-black.png" alt="Logo">
+        </span>
+    </a>-->
 
-        <div class="all-menu-wrapper" id="navbarMenu">
-            <nav class="navbar-mainmenu">
-                <ul class="navbar-nav mr-auto mr-auto-my">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html#home">Home
-                            <span class="sr-only">(current)</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="item.html">Item</a>
-                    </li>
-                </ul>
-            </nav>
+    <!---- <div class="all-menu-wrapper" id="navbarMenu">
+        <nav class="navbar-mainmenu">
+            <ul class="navbar-nav mr-auto mr-auto-my">
+                <li class="nav-item active">
+                    <a class="nav-link" href="index.html#home">Home
+                        <span class="sr-only">(current)</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="item.html">Item</a>
+                </li>
+            </ul>
+        </nav>
 
-            <nav class="navbar-sidebar ">
-                <ul class="social">
-                    <li>
-                        <a href="">
-                            <i class="icon fa fa-facebook"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <i class="icon fa fa-instagram"></i>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+        <nav class="navbar-sidebar ">
+            <ul class="social">
+                <li>
+                    <a href="">
+                        <i class="icon fa fa-facebook"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <i class="icon fa fa-instagram"></i>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+    </header>-->
     <!-- End Header -->
 
     <!-- Start Cover -->
@@ -107,6 +107,10 @@
                             <div class="title-desc">
                                 <h2 class="display-4 display-title home-title anim-1">Kate Davis</h2>
                                 <h4 class="anim-2 opacity-75">Portfolio</h4>
+                                <br>
+                                <a href="file:///Users/katedavis/Desktop/Resume2020.pdf">
+                                    Resume</a>
+                                </h4>
                             </div>
                         </div>
                         <div class="col-12">
@@ -282,7 +286,7 @@
                 <footer class="section-footer scrolldown">
                     <a class="down">
                         <span class="icon"></span>
-                        <span class="txt">Testimonials</span>
+                        <span class="txt">Contact Me</span>
                     </a>
                 </footer>
             </div>
@@ -290,228 +294,42 @@
         <!-- End Projects -->
 
 
-        <!-- Start Testimonials -->
-        <div class="section testimonials section-twoside fp-auto-height-responsive " data-section="testimonials">
-            <div class="section-wrapper twoside center-vh dir-col anim">
-                <div class="anim-2 text-center mb-3">
-                    <h2 class="display-4 display-title anim-2">Testimonials</h2>
-                    <p>Our customers from worldwide & trusted us many years</p>
-                </div>
 
-                <div class="swiper-container carousel-swiper-beta slider-container fade-2 swiper-container-horizontal">
-                    <div class="item-list swiper-wrapper">
-                        <div class="swiper-slide swiper-slide-prev">
-                            <div class="media-slide-item-gamma">
-                                <div class="media-content text-anim">
-                                    <div class="row">
-                                        <div class="col col-12">
-                                            <div class="media-image mb-3">
-                                                <img class="logo" src="http://via.placeholder.com/100x100"
-                                                    alt="Alt Text">
-                                            </div>
-                                        </div>
-                                        <div class="col col-12 m-auto">
-                                            <div class="media-body">
-                                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati
-                                                    eveniet porro tenetur
-                                                    omnis saepe vitae sapiente eum consectetur. Lorem ipsum dolor sit
-                                                    amet,
-                                                    consectetur
-                                                    adipisicing elit.</p>
-                                                <h4 class="">July Stephan | VP President</h4>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="swiper-slide swiper-slide-active">
-                            <div class="media-slide-item-gamma">
-                                <div class="media-content text-anim">
-                                    <div class="row">
-                                        <div class="col col-12">
-                                            <div class="media-image mb-3">
-                                                <img class="logo" src="http://via.placeholder.com/100x100"
-                                                    alt="Alt Text">
-                                            </div>
-                                        </div>
-                                        <div class="col col-12 m-auto">
-                                            <div class="media-body">
-                                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati
-                                                    eveniet porro tenetur
-                                                    omnis saepe vitae sapiente eum consectetur. Lorem ipsum dolor sit
-                                                    amet,
-                                                    consectetur
-                                                    adipisicing elit.</p>
-                                                <h4 class="">Edmon Mariston | Co-Founder Labs</h4>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="swiper-slide swiper-slide-next">
-                            <div class="media-slide-item-gamma">
-                                <div class="media-content text-anim">
-                                    <div class="row">
-                                        <div class="col col-12">
-                                            <div class="media-image mb-3">
-                                                <img class="logo" src="http://via.placeholder.com/100x100"
-                                                    alt="Alt Text">
-                                            </div>
-                                        </div>
-                                        <div class="col col-12 m-auto">
-                                            <div class="media-body">
-                                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati
-                                                    eveniet porro tenetur
-                                                    omnis saepe vitae sapiente eum consectetur. Lorem ipsum dolor sit
-                                                    amet,
-                                                    consectetur
-                                                    adipisicing elit.</p>
-                                                <h4 class="">Lia Kart | CEO Startup-Land</h4>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <nav class="items-navigation">
-                        <div class="items-pagination bar swiper-pagination-clickable swiper-pagination-bullets">
-                            <span class="swiper-pagination-bullet"></span>
-                            <span class="swiper-pagination-bullet swiper-pagination-bullet-active"></span>
-                            <span class="swiper-pagination-bullet"></span>
-                        </div>
-                    </nav>
-                </div>
-
-                <footer class="section-footer scrolldown">
-                    <a class="down">
-                        <span class="icon"></span>
-                        <span class="txt">Subscribe</span>
-                    </a>
-                </footer>
-            </div>
-        </div>
         <!-- End Testimonials -->
 
-        <!-- Start Subscribe -->
-        <div class="section section-subscribe fp-auto-height-responsive fp-section anim fp-completely"
-            data-section="register">
-            <div class="section-wrapper center-vh dir-col">
-                <div class="section-title text-center">
-                    <h2 class="display-4 display-title anim-2 mb-32">Our Newsletters</h2>
-                    <p class="invite anim-3 opacity-75">Be the first to hear about the latest releases.</p>
-                </div>
-
-                <div class="section-content reduced">
-                    <div class="row">
-                        <div class="col-12 col-md-10 col-lg-10 anim-2 m-auto">
-                            <img src="./resources/img/subscrip-img.png" alt="">
-                            <form class="send_email_form form-container form-content-transparent form-content-white"
-                                method="post" action="#">
-                                <div class="form-input  anim-4">
-                                    <div class="form-group form-success-gone">
-                                        <label for="reg-name">Name</label>
-                                        <input id="reg-name" name="name" class="form-control-line form-control-white"
-                                            type="text">
-                                    </div>
-                                    <div class="form-group form-success-gone">
-                                        <label for="reg-email">Email</label>
-                                        <input id="reg-email" name="email" class="form-control-line form-control-white"
-                                            type="email" required data-validation-type="email" />
-                                    </div>
-                                    <div class="form-group mb-0 text-center">
-                                        <div>
-                                            <p class="email-ok invisible form-text-feedback form-success-visible">Your
-                                                email
-                                                has been registred, thank you.</p>
-                                        </div>
-                                        <button id="submit-email" class="btn btn-outline-white form-success-gone"
-                                            name="submit_email">Subscribe
-                                        </button>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-
-                    </div>
-                </div>
-
-                <footer class="section-footer scrolldown">
-                    <a class="down">
-                        <span class="icon"></span>
-                        <span class="txt">Contact Us</span>
-                    </a>
-                </footer>
-            </div>
-        </div>
-        <!-- End Subscribe -->
 
         <!-- Start Contact -->
         <div class="section section-contact fp-auto-height-responsive no-slide-arrows " data-section="contact">
-            <div class="section-wrapper center-vh dir-col anim">
-                <div class="section-title text-center">
-                    <h2 class="display-4 display-title">Contact Us</h2>
-                    <p>Need Help? Don't Forget to Contact With Us</p>
-                </div>
+            <div class="section-wrapper center-vh dir-col anim"></div>
+            <div class="section-title text-center">
+                <h2 class="display-4 display-title">Contact Me</h2>
 
-                <div class="section-content reduced">
-                    <div class="row">
-                        <div class="col-12 col-md-12 col-lg-7 text-left contact-left">
-                            <form class="send_message_form message form" method="post" action="#" id="message_form">
-                                <div class="form-group name">
-                                    <label for="mes-name">Name</label>
-                                    <input id="mes-name" name="name" type="text" placeholder=""
-                                        class="form-control-line form-success-clean" required>
-                                </div>
-                                <div class="form-group email">
-                                    <label for="mes-email">Email</label>
-                                    <input id="mes-email" type="email" placeholder="" name="email"
-                                        class="form-control-line form-success-clean" required>
-                                </div>
-                                <div class="form-group no-border">
-                                    <label for="mes-text">Message</label>
-                                    <textarea id="mes-text" name="message"
-                                        class="form-control form-control-outline thick form-success-clean"
-                                        required></textarea>
-                                    <div>
-                                        <p class="message-ok invisible form-text-feedback form-success-visible">Your
-                                            message
-                                            has been sent, thank you.</p>
-                                    </div>
-                                </div>
-                                <div class="btns">
-                                    <button id="submit-message" class="btn btn-outline-white btn-full email_b"
-                                        name="submit_message">
-                                        <i class="icon ion-email mr-2"></i>
-                                        <span class="txt">Send</span>
-                                        <span class="arrow-icon"></span>
-                                    </button>
-                                </div>
-                            </form>
-                        </div>
-                        <div class="col-12 col-md-12 col-lg-5 text-left contact-right">
-                            <img src="./resources/img/phone-icon.png" alt="">
-                            <div>
-                                <h4>Address</h4>
-                                <p>634 Crocker St, Los Angeles</p>
-                                <p>134 Mangan St, New York</p>
-                            </div>
-                            <div>
-                                <h4>Phone</h4>
-                                <p>+ 01 234 567 89</p>
-                            </div>
-                            <div>
-                                <h4>Email</h4>
-                                <p>malena@support.com</p>
-                                <p>support@malena.com</p>
-                            </div>
-                        </div>
+            </div>
+
+            <div row>
+                <div class="col-12 col-md-12 col-lg-12 text-center">
+                    <div>
+                        <h4>Phone</h4>
+                        <p>214-417-5642</p>
+                    </div>
+                    <div>
+                        <h4>Email</h4>
+                        <p>katedavis248@yahoo.com</p>
+                    </div>
+                    <div>
+                        <a href="https://www.linkedin.com/in/katedavis248/">
+                            <h4>LinkedIn</h4>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="https://github.com/katedavis248">
+                            <h4>GitHub</h4>
+                        </a>
                     </div>
                 </div>
             </div>
+        </div>
+        </div>
         </div>
         <!-- End Contact -->
 
@@ -519,22 +337,22 @@
     <!-- End Content -->
 
     <!-- Start Footer -->
-    <footer id="site-footer" class="page-footer">
-        <!-- Left content -->
+    <!----  <footer id="site-footer" class="page-footer">
+         Left content 
         <div class="footer-left">
             <span class="opacity-75"><i class="icon ion-android-call"></i>+ 01 234 567 89</span>
             <span class="opacity-75"><i class="icon ion-email"></i>malena@support.com</span>
-        </div>
+        </div>-->
 
-        <!-- Right content -->
-        <div class="footer-right">
+    <!-- Right content -->
+    <!----  <div class="footer-right">
             <p class="note">© 2019 Developed by
                 <a href="https://themeforest.net/user/lifeinsys/portfolio">
                     <span class="marked"> LifeInSYS</span>
                 </a>
             </p>
         </div>
-    </footer>
+    </footer>-->
     <!-- End Footer  -->
 
     <!-- Scripts -->
