--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                                     <i class="icon ion-ios-pie-outline"></i>
                                     <p>Collabortation is a part of web-development that I am most excited about. I am
                                         able to
-                                        create a professional looking website for companies that
+                                        create a professional looking website wih marketing companies that
                                         will keep attract clientele. </p>
                                 </div>
                             </div>
@@ -277,7 +277,17 @@
                                         <h2 class="display-4">Destination</h2>
                                     </a>
                                 </div>
+
                             </li>
+                            <li class="slide-item swiper-slide">
+                                <div class="item-wrapper">
+                                    <div class="illustr">
+                                        <img src="friend.jpg" alt="Image" class="img">
+                                    </div>
+                                    <a class="legend" href="https://ancient-beyond-68985.herokuapp.com/">
+                                        <h2 class="display-4">Friend Finder</h2>
+                                    </a>
+                                </div>
                         </ul>
                     </div>
                     <div class="items-pagination bar"></div>
