--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                                 <h2 class="display-4 display-title home-title anim-1">Kate Davis</h2>
                                 <h4 class="anim-2 opacity-75">Portfolio</h4>
                                 <br>
-                                <a href="file:///Users/katedavis/Desktop/Resume2020.pdf">
+                                <a href="https://1drv.ms/w/s!Aqyqd0_-yh6igRSU_RidE935Ngq4?e=AwUkvU">
                                     Resume</a>
                                 </h4>
                             </div>
